<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:focusable="false"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightBlack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_address"
        android:text="@string/address"
        android:textSize="17sp"
        android:textColor="@color/lightBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/serviceLinearLayout"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:src="@drawable/ic_contact_phone"
            android:id="@+id/phone_button" />

        <ImageButton
            android:id="@+id/webButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_open_in_browser" />

        <ImageButton
            android:id="@+id/emailButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:src="@drawable/ic_email" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serviceLinearLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTV"
            android:text="@string/phone"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@color/lightBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browserTV"
            android:text="@string/website"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@color/lightBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTV"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/email"
            android:textSize="17sp"
            android:textColor="@color/lightBlack"/>

    </LinearLayout>

</LinearLayout>