<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:focusable="true"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">


    <Button
        android:id="@+id/delete_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/delete_all"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="right"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="15"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star_big_on" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_fav"
        android:text="@string/favorite"
        android:layout_margin="10dp"
        android:layout_weight="12"
        android:layout_below="@+id/delete_all_btn"
        android:textSize="20sp"
        android:textColor="#111"/>

 </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fav"
        android:background="@color/colorPrimary"
        android:id="@+id/delete_fav_btn"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:text="@string/delete"/>

</LinearLayout>